--- a/style.css
+++ b/style.css
@@ -48,3 +48,13 @@ body {
     transform-origin: 0% 100%;
 
 }
+
+#center {
+    height: 10px;
+    width: 10px;
+    border-radius: 5px;
+    background-color: rgb(255, 255, 55);
+    position: absolute;
+    left: 145px;
+    bottom: 145px;
+}
